# nifti-rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: affine.rs  header.rs  object.rs  util.rs  writer.rs
src/volume/: element.rs  inmem.rs  mod.rs  streamed.rs
tests/: affine.rs  writer.rs
